# DNA_PredatorPrey

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OutputData  Ploter.1.py  Ploter.1.py.bak  Ploter.py  TODO.txt  base.cpp  bootstrap.sh  cmake_install.cmake  dataName  makegif.sh  predatorPrey.cpp  predator_prey  predator_prey.cpp  pythonRun.sh  readme.md  run.sh  speedtests.sh  two_dimensional_phase_lattice  two_dimensional_phase_lattice.cpp
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmakeTest/: CTestTestfile.cmake  DartConfiguration.tcl  particle_test
demo-cuda-pybind11-master/: CMakeLists.txt  test.py
ploter/: Ploter.py
run/testCUDA/: testCUDA.exp  testCUDA.lib
src/: CMakeLists.txt  basic_computation_functions.cpp  basic_computation_functions.cu  basic_computation_functions.cu~39011cd5c1111e3bf02cf97a6ff0a4b2dbb14764  basic_computation_functions.hpp  constants.hpp  equation_constants.cu~39011cd5c1111e3bf02cf97a6ff0a4b2dbb14764  equation_constants.hpp  function.h  functions.cpp  functions.cu  functions.h  launcher.cu  launcher.h  main.cpp  main.cu  makefile  matrix.hpp  module.cpp  phase_chain.cpp  predatorPrey.cpp  predatorPrey.cu  predator_prey_system.hpp  predator_prey_system_gpu.hpp  run.py  testCUDA.cu  testOpenCL.cpp  writeSnapshots.hpp
src/PDESystemCUDA/: iterator_system.cu  iterator_system.hpp  runge_kutta_4_stepper.cu  runge_kutta_4_stepper.h  runge_kutta_4_stepper.hpp
src/PdeSystem/: cudaComputer.cu  cudaComputer.hpp  functions.cpp  functions.cu  predator_prey_iterator.cu  predator_prey_system.cpp  predator_prey_system.hpp  predator_prey_system_gpu.cpp  predator_prey_system_gpu.cu  predator_prey_system_gpu.hpp  predator_prey_systems.hpp  predator_prey_systems_cuda.hpp
src/cudaLinking/: CMakeLists.txt  main.cpp  main.cu  makefile  particle.cu  play.cu  play.h  v3.h
src/data/: matrix.hpp  matrixBoost.cpp  table.hpp
src/dataStructure/: dim2.h  dim3T.h  state.cpp  state.cu  state.h  state.hpp
src/utilitary/: cudaErrorCheck.h  cudaHelper.h  dim3T.h  functions.cu  functions.h  initialConditionsBuilder.hpp  normalize.h
